fix(planets): :lipstick: improve styles on mobile devices

--- a/src/sketches/planets/src/index.css
+++ b/src/sketches/planets/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   overflow: hidden;
   width: 100vw;
